--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/platform-ws": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^10.4.1",
     "@socket.io/redis-adapter": "^8.3.0",
     "@valkey/client": "^1.0.0",
